--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   </div>
   <div class="navigation">
     <ul>
-      <li><a href="index.html">Flexbox</a></li>
-      <li><a href="table.html">Table</a></li>
+      <li><a href="index.html">Mobile</a></li>
+      <li><a href="email.html">email</a></li>
     </ul>
   </div>
   <div class="mid_title">
